--- a/数据集制作教程.md
+++ b/数据集制作教程.md
@@ -18,3 +18,4 @@
 1. 只有【物体正面】的对象才需要标注控制点，其他的对象不需要标注控制点
 2. 标注控制点时，尽量让两个控制点距离远点，且选择物体上花纹明显的区域
 3. 【物体正面】的对象必须填写group_id，且每个对象的group_id都是唯一的 ，其他的对象不需要填写group_id
+4. 注意“样本均衡”，检测模型只能检测出在训练的时候看过的图像，做到每一种标签的样本数量均衡，不要某一种标签的数量远多于其他种类的标签
